--- a/docker_fullstack/frontend/src/components/MediaCard.css
+++ b/docker_fullstack/frontend/src/components/MediaCard.css
@@ -1,4 +1,4 @@
-.movie {
+.media {
   flex: 1 1 150px;
   max-width: 200px;
   min-width: 150px;
@@ -21,7 +21,7 @@
   display: block;
 }
 
-.movie h3 {
+.media h3 {
   font-size: 1rem;
   padding: 0.5rem;
   padding-top: 1rem;
