--- a/docker_fullstack/frontend/src/pages/MediaDetails.css
+++ b/docker_fullstack/frontend/src/pages/MediaDetails.css
@@ -10,17 +10,21 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  max-width: 1200px;
 }
 
 .details-layout {
   font-family: Arial, Helvetica, sans-serif;
-  background: #232323;
+  background: #171717;
   color: #d5d4d4;
   border-radius: 10px;
-  margin: 3rem;
+  margin: 1rem;
+  margin-top: 3rem;
   padding: 1rem;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  gap: 3rem;
 }
 
 .darker-text {
@@ -28,17 +32,21 @@
 }
 
 .poster {
-  flex: 1;
-  background-color: rgb(44, 44, 43);
+  background-color: #3f3f3f;
+  flex: 1 1 300px;
   border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  overflow: hidden;
+  object-fit: cover;
+  aspect-ratio: 2 / 3;
 }
 
 .details {
-  flex: 2;
-  /* background-color: rgb(26, 26, 25); */
+  flex: 2 1 400px;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem 2rem 0.5rem 2rem;
 }
 
 .details h1,
@@ -50,21 +58,18 @@ h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex: 1;
   margin-bottom: 0.5rem;
 }
 
 .meta-row {
-  flex: 1;
   display: flex;
   gap: 1rem;
   margin-bottom: 2rem;
 }
 
 .description-row {
-  flex: 1;
   max-width: 60ch;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .description-row h2 {
@@ -72,7 +77,6 @@ h2 {
 }
 
 .info-table-row {
-  flex: 1;
   display: grid;
   grid-template-columns: 100px auto;
   row-gap: 0.6rem;
