--- a/docker_fullstack/frontend/src/pages/MediaDetails.css
+++ b/docker_fullstack/frontend/src/pages/MediaDetails.css
@@ -79,8 +79,15 @@ h2 {
 .info-table-row {
   display: grid;
   grid-template-columns: 100px auto;
-  row-gap: 0.6rem;
+  row-gap: 1rem;
   margin-bottom: 2rem;
+}
+
+.cast-crew-genres {
+  display: flex;
+  gap: 1rem;
+  row-gap: 0.2rem;
+  flex-wrap: wrap;
 }
 
 .rating-row {
