--- a/docker_fullstack/frontend/src/components/NavBar.css
+++ b/docker_fullstack/frontend/src/components/NavBar.css
@@ -1,14 +1,25 @@
-.navbar {
-  background-color: #000000;
-  padding: 1rem 2rem;
+ .navbar {
+  background-color: #222222;
+  padding: 0.5rem 1.5rem;  
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  
+  
 }
 
+
+.navbar-brand {
+  display: flex;
+  gap: 0.5rem;
+  align-self: flex-start;
+}
+
+
 .navbar-logo{
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   font-weight: bold;
   color: #ffffff;
   text-decoration: none;
@@ -17,11 +28,12 @@
 
 .navbar-links {
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
+  align-self: flex-end
 }
 
 .nav-link {
-  font-size: 1rem;
+  font-size: 1.25rem;
   padding: 0.5rem 1rem;
   border-radius: 4px;
   transition: background-color 0.2s;
@@ -29,6 +41,16 @@
   text-decoration: none;
 }
 
+.navbar-usericon {
+  display: flex;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  align-self: flex-end;
+  
+  
+}
+
+.navbar-usericon:hover,
 .nav-link:hover,
 .navbar-logo:hover {
   background-color: rgb(218, 148, 83);
@@ -51,4 +73,4 @@
   .nav-link {
     padding: 0.5rem;
   }
-}
+ } 
