--- a/docker_fullstack/frontend/src/components/MediaContainer.css
+++ b/docker_fullstack/frontend/src/components/MediaContainer.css
@@ -1,7 +1,8 @@
 .media-container {
   font-family: Arial, sans-serif;
-  background: #1d1d1d;
-  color: #fff;
+  background: #171717d2;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  color: #f0f0f0;
   padding: 1rem;
   border-radius: 10px;
   margin: 1rem;
