--- a/docker_fullstack/frontend/src/components/NavBar.css
+++ b/docker_fullstack/frontend/src/components/NavBar.css
@@ -1,15 +1,12 @@
- .navbar {
-  background-color: #222222;
-  padding: 0.5rem 1.5rem;  
+.navbar {
+  background-color: #171717;
+  padding: 0.5rem 1.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  
-  
 }
-
 
 .navbar-brand {
   display: flex;
@@ -17,8 +14,7 @@
   align-self: flex-start;
 }
 
-
-.navbar-logo{
+.navbar-logo {
   font-size: 2.5rem;
   font-weight: bold;
   color: #ffffff;
@@ -29,7 +25,7 @@
 .navbar-links {
   display: flex;
   gap: 1rem;
-  align-self: flex-end
+  align-self: flex-end;
 }
 
 .nav-link {
@@ -46,15 +42,12 @@
   padding: 0.5rem 1rem;
   border-radius: 4px;
   align-self: flex-end;
-  
-  
 }
 
 .navbar-usericon:hover,
 .nav-link:hover,
 .navbar-logo:hover {
   background-color: rgb(218, 148, 83);
-
 }
 
 @media (max-width: 768px) {
@@ -73,4 +66,4 @@
   .nav-link {
     padding: 0.5rem;
   }
- } 
+}
