--- a/docker_fullstack/frontend/src/components/NowPlaying.css
+++ b/docker_fullstack/frontend/src/components/NowPlaying.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  background-color: #1d1d1d;
+  background-color: #171717d2;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   margin: 1rem;
 }
@@ -11,7 +12,7 @@
   font-family: Arial, sans-serif;
   font-size: 1.2rem;
   font-weight: bold;
-  color: #fff;
+  color: #f0f0f0;
   margin-bottom: 1rem;
 }
 
@@ -34,7 +35,7 @@
 }
 
 .now-playing-scroll::-webkit-scrollbar-thumb {
-  background-color: #555;
+  background-color: #313131;
   border-radius: 4px;
 }
 
