--- a/docker_fullstack/frontend/src/components/SearchBar.css
+++ b/docker_fullstack/frontend/src/components/SearchBar.css
@@ -1,7 +1,8 @@
 .search-bar input {
   padding: 1rem 1rem;
   border-radius: 20px;
-  background-color: #222;
+  background-color: #171717;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   color: #fff;
   font-size: 1rem;
   border: none;
