--- a/docker_fullstack/frontend/src/components/NavBar.css
+++ b/docker_fullstack/frontend/src/components/NavBar.css
@@ -3,9 +3,9 @@
   padding: 0.5rem 1.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .navbar-brand {
@@ -33,8 +33,9 @@
   padding: 0.5rem 1rem;
   border-radius: 4px;
   transition: background-color 0.2s;
-  color: #ffffff;
+  color: #b9964c;
   text-decoration: none;
+  font-weight: 900;
 }
 
 .navbar-usericon {
@@ -47,7 +48,8 @@
 .navbar-usericon:hover,
 .nav-link:hover,
 .navbar-logo:hover {
-  background-color: rgb(218, 148, 83);
+  transform: scale(1.03);
+  filter: brightness(1.2);
 }
 
 @media (max-width: 768px) {
