--- a/docker_fullstack/frontend/src/components/NavBar.css
+++ b/docker_fullstack/frontend/src/components/NavBar.css
@@ -2,30 +2,26 @@
   background-color: #171717;
   padding: 0.5rem 1.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
 
-.navbar-brand {
   display: flex;
-  gap: 0.5rem;
-  align-self: flex-start;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  gap: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .navbar-logo {
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #ffffff;
-  text-decoration: none;
-  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .navbar-links {
   display: flex;
-  gap: 1rem;
-  align-self: flex-end;
+  gap: 1.5rem;
+  align-items: center;
 }
 
 .nav-link {
@@ -33,39 +29,53 @@
   padding: 0.5rem 1rem;
   border-radius: 4px;
   transition: background-color 0.2s;
-  color: #b9964c;
+  color: #d1954b;
   text-decoration: none;
   font-weight: 900;
 }
 
 .navbar-usericon {
   display: flex;
-  padding: 0.5rem 1rem;
-  border-radius: 4px;
-  align-self: flex-end;
+  align-items: center;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .navbar-usericon:hover,
-.nav-link:hover,
-.navbar-logo:hover {
+.nav-link:hover {
   transform: scale(1.03);
   filter: brightness(1.2);
 }
 
+.navbar-logo:hover {
+  filter: brightness(1.2);
+}
+
+/* Mobiili */
 @media (max-width: 768px) {
   .navbar {
-    padding: 1rem;
-  }
-
-  .navbar-brand {
-    font-size: 1.2rem;
-  }
-
-  .navbar-links {
+    flex-wrap: wrap; /* sallii rivinvaihdon */
+    justify-content: center; /* keskitetään logo ja linkit */
+    text-align: center;
     gap: 1rem;
   }
 
-  .nav-link {
-    padding: 0.5rem;
+  .navbar-brand {
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 0.5rem; /* tilaa logon ja linkkien väliin */
+  }
+
+  .navbar-links {
+    width: 100%;
+    justify-content: center; /* keskitetään linkit ja user-nappi */
+    gap: 1rem;
+    flex-wrap: nowrap; /* pysyvät samalla rivillä */
+  }
+
+  .navbar-usericon {
+    margin-left: 0;
   }
 }
