--- a/docker_fullstack/frontend/src/components/MediaCard.css
+++ b/docker_fullstack/frontend/src/components/MediaCard.css
@@ -46,3 +46,10 @@
   padding-top: 1rem;
   text-align: center;
 }
+
+.rating-mediacard {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
