--- a/docker_fullstack/frontend/src/pages/Home.css
+++ b/docker_fullstack/frontend/src/pages/Home.css
@@ -24,16 +24,14 @@
   padding-top: 2rem;
 }
 
-/* Tabletti (≥ 600px) */
 @media (min-width: 600px) {
   .search-bar input {
     width: 400px;
   }
 }
 
-/* Desktop / iso näyttö (≥ 1024px) */
 @media (min-width: 800px) {
   .search-bar input {
-    width: 600px; /* kiinteä leveys isoilla näytöillä */
+    width: 600px;
   }
 }
