--- a/docker_fullstack/frontend/src/pages/MediaDetails.css
+++ b/docker_fullstack/frontend/src/pages/MediaDetails.css
@@ -114,7 +114,13 @@ h2 {
 }
 
 .rating-row {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.5rem;
+  padding-top: 1rem;
+  text-align: center;
 }
 
 .review {
@@ -124,4 +130,16 @@ h2 {
   border-radius: 10px;
   margin: 1rem;
   padding: 1rem;
+}
+
+@media (max-width: 811px) {
+  .poster,
+  .details {
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    max-width: 60ch;
+    flex-direction: column;
+  }
 }
