--- a/docker_fullstack/frontend/src/pages/Movies.css
+++ b/docker_fullstack/frontend/src/pages/Movies.css
@@ -99,6 +99,12 @@
   font-size: 1rem;
 }
 
+.rating {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 @media (max-width: 768px) {
   .movies-container {
     padding: 0 1rem;
@@ -123,4 +129,3 @@
     align-items: center;
   }
 }
-
